--- a/mq-rocketmq-4x/pom.xml
+++ b/mq-rocketmq-4x/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.0.4</version>
+            <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
         </dependency>
 
         <dependency>
