--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <transmittable-thread-local.version>2.14.2</transmittable-thread-local.version>
         <hippo4j-threadpool-config-mode.version>1.5.0</hippo4j-threadpool-config-mode.version>
         <micrometer-registry-prometheus.version>1.10.6</micrometer-registry-prometheus.version>
+        <springdoc-openapi-starter-webmvc-ui.version>2.0.4</springdoc-openapi-starter-webmvc-ui.version>
         <!-- Maven编译相关 -->
         <maven-common-plugin.version>3.1.0</maven-common-plugin.version>
         <maven-compiler-plugin.version>3.6.1</maven-compiler-plugin.version>
