feature: 开发 ShardingSphere 5.x 版本数据分片功能示例

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>mq-rocketmq-4x</module>
+        <module>shardingsphere-5x</module>
     </modules>
 
     <properties>
